# oi

./: .env.example  Quarto do Pedro (programação)  README.md  pyproject.toml
lunar_bot/: __main__.py  config.py
lunar_bot/cogs/: reaction_roles.py
lunar_bot/core/: bot.py
lunar_bot/db/: base.py  models.py
lunar_bot/services/: reaction_roles.py
